Set the overflow issue

--- a/src/input.css
+++ b/src/input.css
@@ -14,9 +14,9 @@
  @apply h-0 w-0 border-[6px] border-b-0 border-x-transparent border-t-gray-400;
 }
 
-.arrow-up {
+/* .arrow-up {
  @apply h-0 w-0 border-t-0 border-x-transparent;
-}
+} */
 
 .selected-tab {
  @apply border-b-green-600 font-semibold text-green-600;
@@ -24,4 +24,16 @@
 
 .selected-option {
  @apply border-green-600 bg-green-50 font-semibold text-green-600;
+}
+
+#SELECT_FIRST_DROPDOWN::before {
+ content: "";
+ position: absolute;
+ width: 0;
+ height: 0;
+ bottom: 100%;
+ left: .75rem;
+ border: 8px solid transparent;
+ border-top: 0;
+ border-bottom: 8px solid white;
 }
